ApiGateways/Envoy/config/web/envoy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: demo_backend_route
            virtual_hosts:
            - name: demo_backend
              domains:
              - "*"
              routes:
              - name: "u-short"
                match:
                  prefix: "/user/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/api/user/"
                  cluster: user
              - name: "u-long"
                match:
                  prefix: "/user-api/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/api/"
                  cluster: user
              - name: "p-short"
                match:
                  prefix: "/product/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/api/product/"
                  cluster: product
              - name: "p-long"
                match:
                  prefix: "/product-api/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/api/"
                  cluster: product
              - name: "c-short"
                match:
                  prefix: "/catalog/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/api/Catalog/"
                  cluster: catalog
              - name: "c-long"
                match:
                  prefix: "/catalog-api/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/api/"
                  cluster: catalog
              - name: "agg-short"
                match:
                  prefix: "/agg/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/api/"
                  cluster: webapiagg
              - name: "agg-long"
                match:
                  prefix: "/agg-api/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/api/"
                  cluster: webapiagg
          http_filters:
          - name: envoy.router
  clusters:
  - name: user
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: s_user_api
        port_value: 9000
  - name: product
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: s_product_api
        port_value: 9001
  - name: catalog
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: s_catalog_api
        port_value: 9002
  - name: webapiagg
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: s_api_aggregator
        port_value: 9003
